<package format="2">
  <name>chat_room_node</name>
  <version>0.1.0</version>
  <description>A simple chat room node using ROS2 and C++.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp_components</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>